fix printing lots of line breaks the layout

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,7 +6,7 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
-    min-height: 100vh;
+    height: 100vh;
     overflow: hidden;
     background-color: #1e1e1e;
     display: flex;
